Added counter of words.

--- a/templates/reverse.html
+++ b/templates/reverse.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<h1>Original text</h1>
+<h1>Original text has {{number_of_words}} words!</h1>
 {{message}}
 <h1>Reversed Text</h1>
 {{reversed}}
